--- a/public/locales/zh/projects/berify.json
+++ b/public/locales/zh/projects/berify.json
@@ -27,23 +27,26 @@
       ]
     },
     "architectureMetricsTitle": "核心工程與貢獻",
-    "architectureMetrics": [
-      {
-        "title": "模組化規模",
-        "metric": "9 組功能模組 / 100+ 領域模型",
-        "desc": ["設計並主導三層式收藏體系，並與電商平台實現數據對接", "整合生物辨識 IDV 安全體系"]
-      },
-      {
-        "title": "資料演進",
-        "metric": "114+ 次資料庫架構演進歷程",
-        "desc": ["設計扁平化留言模型，避免 N+1 查詢問題", "透過 Prisma 物理約束，維護高頻遷移一致性"]
-      },
-      {
-        "title": "原生層穩定性",
-        "metric": "跨平台環境標準化",
-        "desc": ["排除核心模組編譯衝突，穩定原生建置環境", "解決 App Clip 視圖殘留異常"]
-      }
-    ],
+    "architectureMetrics": {
+      "title": "核心工程與貢獻",
+      "list": [
+        {
+          "title": "模組化規模",
+          "metric": "9 個分散式服務單元 / 188+ 領域模型",
+          "desc": ["設計並主導三層式收藏體系，並與電商平台實現數據對接", "整合生物辨識 IDV 安全體系"]
+        },
+        {
+          "title": "資料演進",
+          "metric": "114+ 次資料庫架構演進歷程",
+          "desc": ["設計扁平化留言模型，避免 N+1 查詢問題", "透過 Prisma Schema 強型別約束，維護高頻遷移一致性"]
+        },
+        {
+          "title": "原生層穩定性",
+          "metric": "跨平台環境標準化",
+          "desc": ["排除核心模組編譯衝突，穩定原生建置環境", "解決 App Clip 視圖殘留異常"]
+        }
+      ]
+    },
     "technicalSpotlight": [
       {
         "id": "idv",
