feat(portfolio): 重構 TechnicalSpotlight 並新增 AppClip 專屬技術展示組件 - 將 Collapsible 組件改為受控組件 (Controlled Component)，改由父層管理展開狀態 - 新增 AppClipFeature 組件，優化 App Clip 技術挑戰與解決方案的視覺呈現 - 為程式碼區塊實作行號高亮 (Highlights) 與互動式工具提示 (Tooltips) 功能 - 更新 Berify 專案的多語系資料，納入更詳細的 App Clip 重構技術說明

--- a/public/locales/en/projects/berify.json
+++ b/public/locales/en/projects/berify.json
@@ -393,7 +393,13 @@
         "codeSnippet": {
           "title": "Native UI Stack Cleanup Logic",
           "language": "swift",
-          "code": "// Ensure atomicity of App Clip scan flow via recursive dismiss\nfunc useLandingController() -> LandingViewController? {\n  let keyWindow = UIApplication.shared.windows.filter {$0.isKeyWindow}.first\n  if var topController = keyWindow?.rootViewController {\n    // Find the topmost View Controller\n    while let presentedViewController = topController.presentedViewController {\n      topController = presentedViewController\n    }\n    // Safe cleanup: Dismiss only scan-related pages\n    if topController is ScanResultViewController || topController is ScanErrorViewController {\n        topController.dismiss(animated: false)\n    }\n  }\n  return keyWindow?.rootViewController as? LandingViewController\n}"
+          "code": "// Ensure atomicity of App Clip scan flow via recursive dismiss\nfunc useLandingController() -> LandingViewController? {\n  let keyWindow = UIApplication.shared.windows.filter {$0.isKeyWindow}.first\n  if var topController = keyWindow?.rootViewController {\n    // Find the topmost View Controller\n    while let presentedViewController = topController.presentedViewController {\n      topController = presentedViewController\n    }\n    // Safe cleanup: Dismiss only scan-related pages\n    if topController is ScanResultViewController || topController is ScanErrorViewController {\n        topController.dismiss(animated: false)\n    }\n  }\n  return keyWindow?.rootViewController as? LandingViewController\n}",
+          "highlights": [6, 10, 11],
+          "tooltips": [
+            { "line": 6, "content": "Recursively find topmost Presented VC" },
+            { "line": 10, "content": "Clean up only specific view types" },
+            { "line": 11, "content": "Force remove residual windows (animated: false)" }
+          ]
         }
       }
     ],
